# myMemorySys

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  docker-compose.yml  memory-system-tech-doc.md  pyproject.toml
hooks/: on_pre_compact.sh  on_prompt_submit.sh
scripts/: deploy.sh  service.sh
sql/: init.sql
