[project]
name = "memory-system"
version = "0.1.0"
description = "Claude Code long-term memory system - MLX embedding service"
requires-python = ">=3.14"
dependencies = [
    "mlx>=0.22.0",
    "tokenizers>=0.21.0",
    "huggingface-hub>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "psycopg2-binary>=2.9.0",
]
